# sac

./: Cargo.toml  MANUAL.md  Makefile  README.md
examples/: country.json  country.toml
man/: sac.1  sac.1.template
src/: blob.rs  digest.rs  field.rs  item.rs  kind.rs  lib.rs  schema.rs  value.rs
src/schema/: attribute.rs  datatype.rs  field.rs  key.rs  mod.rs
src/value/: curie.rs  datetime.rs  de.rs  hash.rs  integer.rs  mod.rs  period.rs  point.rs  polygon.rs  ser.rs  text.rs  timestamp.rs  url.rs
