[package]
name = "sac"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]

[[bin]]
name = "sac"
test = false
doc = false

[[bin]]
name = "play"
test = false
doc = false

[lib]
name = "sac"
path = "src/lib.rs"

[dependencies]
# https://crates.io/crates/fraction
# shell-escape = "~0.1.4"
# termcolor = "~0.3.6"
# exitcode
#https://crates.io/crates/slog
clap = "2.31"
env_logger = "0.5.9"
failure = "0.1"
lazy_static = "1"
log = "0.4.0"
pulldown-cmark = { version = "0.1", default-features = false }
regex = "1.0"
ring = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
